tests/baselines/reference/interfaceExtendingClassWithPrivates.errors.txt
tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts(5,11): error TS2429: Interface 'I' incorrectly extends interface 'Foo':
  Private property 'x' cannot be reimplemented.
tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts(15,10): error TS2341: Property 'Foo.x' is inaccessible.


==== tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts (2 errors) ====
    class Foo {
        private x: string;
    }
    
    interface I extends Foo { // error
              ~
!!! error TS2429: Interface 'I' incorrectly extends interface 'Foo':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
        x: string;
    }
    
    interface I2 extends Foo {
        y: string;
    }
    
    var i: I2;
    var r = i.y;
    var r2 = i.x; // error
             ~~~
!!! error TS2341: Property 'Foo.x' is inaccessible.